--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -134,7 +134,7 @@
   position: fixed
   top: 0 !important
   z-index: 1000
-  height: 50px !important
+  height: 45px !important
   background-color: $color-blue-1
 
 @media (max-width: $media-small-max)
@@ -185,7 +185,7 @@ a.site-title
     display: table
     clear: both
   .the-nav .nav-pill.left
-    height: 40px
+    height: 45px
     overflow: hidden
   .the-nav .nav-pill.right
     z-index: 100
@@ -205,9 +205,8 @@ a.site-title
     border-bottom-color: $color-grey-8
   .the-nav > .nav > li a
     display: block
-    padding: 10px 1rem
+    padding: .5rem
     color: $color-blue-4
-    font-weight: 400
     text-decoration: none
     .course_name
       margin-left: .25rem
@@ -273,8 +272,8 @@ ul.subnav.logged-out
     text-transform: none !important
 
 .login-buttons
-  padding-top: 1rem
-  padding-right: 1rem
+  padding-top: .75rem
+  padding-right: .5rem
   padding-left: .5rem
   float: right
 
