--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -15,7 +15,7 @@
         = image_tag "pointer.png", :width => "125"
         %br
         %h4 Increased Autonomy
-        %p Students make meaningful choices about when and what type of work they want to do to demonstrate their learning.
+        %p Students make choices about when and what type of work they want to do to demonstrate their learning.
       .quarter
         = image_tag "help.png", :width => "125"
         %br
