--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5
   margin: 0
   padding: 0
   clear: both
-  font-family: 'Standard-Weight'
+  font-family: 'Light-Weight'
 
 body
   font-size: 0.9rem
