--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -10,7 +10,7 @@
         = image_tag "rocket.png", :width => "125"
         %br
         %h4 Earn Up
-        %p Flip the frame so that everyone starts at zero and earns their way up to success.
+        %p Flip the frame so that everyone starts at zero and earns their way up to success as they complete course milestones.
       .quarter
         = image_tag "pointer.png", :width => "125"
         %br
