--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -35,7 +35,7 @@ $media-xlarge-max:  120rems
   .hide-for-small
     display: none
 
-@media (max-width: $media-medium-max)
+@media (min-width: $media-small-max) and (max-width: $media-medium-max)
   .hide-for-medium
     display: none
 
