--- a/app/views/pages/_student_features.haml
+++ b/app/views/pages/_student_features.haml
@@ -1,4 +1,4 @@
-.feature-section.white
+.feature-section.double-height-feature-section.white
   %h2.center Grade Predictor
   .image-container
     .center= image_tag "GradePredictor.png", :class => 'center-image'
