--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -219,6 +219,9 @@ a.site-title
       margin-left: .5rem
       color: $color-green-2
 
+  .logged-in .the-nav > .nav > li a
+    padding-top: .85rem
+
   /* Active State */
   .the-nav > .nav > li:hover > a
     color: $color-white
@@ -273,7 +276,7 @@ ul.subnav.logged-out
 
 .login-buttons
   padding-top: .75rem
-  padding-right: .5rem
+  padding-right: .25rem
   padding-left: .5rem
   float: right
 
@@ -304,8 +307,15 @@ ul.subnav.logged-out
 /* Mobile Styles */
 @media (max-width: $media-medium-max)
   .mobile-nav
+    padding-top: .5rem
+    padding-left: .5rem
     margin: 0 auto
     text-align: center
+
+    .login-buttons
+      padding-top: 0.25rem
+      padding-right: .5rem
+
   .nav.nav-pill
     padding: 0
     margin: .75rem
@@ -348,7 +358,10 @@ ul.subnav.logged-out
       color: $color-green-2
 
   .navbar .mobile-nav
-    padding-top: 0
+    padding-top: .5rem
+    padding-left: .5rem
+    margin: 0 auto
+    text-align: center
 
     .nav.nav-pill
       width: 100% !important
@@ -361,4 +374,6 @@ ul.subnav.logged-out
 
     .site-title
       padding: 0
-      margin-left: -6rem
+
+    .right
+      margin-right: 1rem
