--- a/app/views/grades/group_edit.html.haml
+++ b/app/views/grades/group_edit.html.haml
@@ -4,7 +4,7 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   .bold #{term_for :students}
   %ul
     - @group.students.each do |s|
@@ -18,6 +18,7 @@
     = hidden_field_tag "group_id", @group.id
     = f.hidden_field :graded_by_id, :value => current_user.id
     = f.hidden_field :instructor_modified, :value => true
+    = f.hidden_field :submission_id, value: @submission_id
 
     Score:
     = label_tag do
