Refactoring responsive nav

--- a/app/assets/stylesheets/_background.sass
+++ b/app/assets/stylesheets/_background.sass
@@ -1,4 +1,5 @@
 @import color
+@import layout
 
 $background-height: 100px
 
@@ -311,7 +312,7 @@ $layer-back-color: -1000
 // Responsive Changes
 //-------------------------
 
-@media (max-width: 979px)
+@media (max-width: $media-medium-max )
   .mountain-2
     visibility: hidden
   .mountain-5
