--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -113,6 +113,8 @@ a:hover + .display_on_hover
     margin-bottom: 1rem
 
 @media (max-width: $media-medium-max)
+  .mainContainer.staff
+    width: 100%
   .box
     border-bottom: 1px solid $color-grey-3
     padding: 1rem
