--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -42,3 +42,6 @@ $media-xlarge-max:  120rems
 @media (min-width: $media-medium-max)
   .hide-for-large
     display: none
+
+  .show-for-medium-up
+    display: block
