--- a/app/views/layouts/_staff.haml
+++ b/app/views/layouts/_staff.haml
@@ -1,4 +1,4 @@
-.sidebar-container.hide-for-small
+.sidebar-container.hide-for-small.hide-for-medium
   / Staff-only sidebar navigation
   = render 'layouts/navigation/staff_subnav'
 
