--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -60,7 +60,7 @@ li a.notification-right
   padding: 1rem 0 1rem 1rem !important
 
 /* Reducing padding and font size for small screens */
-@media (max-width: $media-small-max)
+@media (max-width: $media-medium-max)
   .student .offscreen-sidebar
     text-transform: capitalize
     li
