Student sidebar showing

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -278,6 +278,9 @@ ul.subnav.logged-out
 
 /* Mobile Styles */
 @media (max-width: $media-medium-max)
+  .navbar .nav-collapse
+    display: none
+    
   .mobile-nav
     padding-top: .5rem
     padding-left: .5rem
@@ -291,7 +294,7 @@ ul.subnav.logged-out
   .nav.nav-pill
     padding: 0
     margin: .75rem
-    
+
   ul.subnav
     margin: 0
     padding: 0
