--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -5,14 +5,14 @@
 
   .offscreen-sidebar
     - if current_user_is_student?
-      = render 'students/student_profile_tabs'
+      .sidebar= render 'students/student_profile_tabs'
     - elsif current_user_is_staff?
       = render 'layouts/navigation/staff_subnav'
 
   .layout-right-content
     %header
       .navbar.container
-        %nav.the-nav.nav-collapse.hide-for-small.hide-for-medium.clearfix{:role => "navigation"}
+        %nav.the-nav.nav-collapse.clearfix{:role => "navigation"}
           %ul.nav.nav-pill.left
             %li.course-site
               %a.no-hover.site-title{:href => dashboard_path}
