--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -184,7 +184,7 @@ ul.subnav.logged-out
   padding-right: 1rem
 
 /* Large Screen Styles*/
-@media (min-width: $media-small-max)
+@media (min-width: $media-medium-max)
   .navbar
     height: auto
   .container
@@ -280,7 +280,7 @@ ul.subnav.logged-out
 @media (max-width: $media-medium-max)
   .navbar .nav-collapse
     display: none
-    
+
   .mobile-nav
     padding-top: .5rem
     padding-left: .5rem
