--- a/app/views/analytics/_buttons.html.haml
+++ b/app/views/analytics/_buttons.html.haml
@@ -1,5 +1,5 @@
 .context_menu
   %ul
-    %li= link_to_unless_current raw("<i class='fa fa-user fa-fw'></i> #{term_for :student} Analytics"), analytics_students_path
-    %li= link_to_unless_current raw("<i class='fa fa-user fa-fw'></i> #{term_for :team_leader} Analytics"), analytics_staff_path
-    %li= link_to  raw("<i class='fa fa-file-zip-o fa-fw'></i> Download Analytics"),  analytics_export_path(format: 'zip')
+    %li= link_to_unless_current glyph(:user) + "#{term_for :student} Analytics", analytics_students_path
+    %li= link_to_unless_current glyph(:user) + "#{term_for :team_leader} Analytics", analytics_staff_path
+    %li= link_to glyph("file-zip-o") + "Download Analytics",  analytics_export_path(format: 'zip')
