--- a/app/views/announcements/_form.html.haml
+++ b/app/views/announcements/_form.html.haml
@@ -13,4 +13,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, "Send Announcement"
-      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), announcements_path, :class => 'button'
+      %li= link_to glyph('times-circle') + "Cancel", announcements_path, :class => 'button'
