--- a/app/views/assignment_types/_form.html.haml
+++ b/app/views/assignment_types/_form.html.haml
@@ -32,4 +32,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, "#{@assignment_type.persisted? ? 'Update' : 'Create'} #{term_for :assignment_type}"
-      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), assignment_types_path, :class => "button"
+      %li= link_to glyph('times-circle') + "Cancel", assignment_types_path, :class => "button"
