--- a/app/views/assignment_types/_buttons.haml
+++ b/app/views/assignment_types/_buttons.haml
@@ -1,7 +1,7 @@
 .context_menu
   %ul
-    %li= link_to raw("<i class='fa fa-plus fa-fw'></i> New #{term_for :assignment_type}"), new_assignment_type_path
+    %li= link_to glyph(:plus) + "New #{term_for :assignment_type}", new_assignment_type_path
     - if @assignment_type.present? && @assignment_type.persisted?
-      %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_assignment_type_path(@assignment_type) 
-      %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See #{@assignment_type.name}"), assignment_type_path(@assignment_type)
-      %li= link_to raw("<i class='fa fa-heartbeat fa-fw'></i> #{@assignment_type.name} Performance"), all_grades_assignment_type_path(@assignment_type)
+      %li= link_to glyph(:edit) + "Edit", edit_assignment_type_path(@assignment_type)
+      %li= link_to glyph(:eye) + "See #{@assignment_type.name}", assignment_type_path(@assignment_type)
+      %li= link_to glyph(:heartbeat) + "#{@assignment_type.name} Performance", all_grades_assignment_type_path(@assignment_type)
