--- a/app/views/assignment_types/index.html.haml
+++ b/app/views/assignment_types/index.html.haml
@@ -6,13 +6,13 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   %table.responsive.nofeatures_dynatable{"aria-describedby" => "tableCaption"}
     %thead
       %tr
         %th{:scope => "col"} Name
         %th{:scope => "col"} Max Points
-        %th{:scope => "col"} 
+        %th{:scope => "col"}
           %span.sr-only Actions
     %tbody
       - @assignment_types.each do |assignment_type|
@@ -37,8 +37,8 @@
                   %i.fa.fa-cloud-download.fa-fw
                   Download Scores
               %li
-                = link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), assignment_type_path(assignment_type), :data => { confirm: 'Are you sure? This will delete all associated assignments and their grades.', method: :delete }, :class => "button"
-                  
+                = link_to glyph(:trash) + "Delete", assignment_type_path(assignment_type), :data => { confirm: 'Are you sure? This will delete all associated assignments and their grades.', method: :delete }, :class => "button"
+
 
   %h4.subtitle= "#{term_for :student} Scores"
 
