--- a/app/views/assignment_types/show.html.haml
+++ b/app/views/assignment_types/show.html.haml
@@ -5,7 +5,7 @@
 = render "buttons"
 
 .pageContent
-  
+
   = render 'layouts/alerts'
 
   %table.nofeatures_dynatable{"aria-describedby" => "tableCaption"}
@@ -29,8 +29,7 @@
           %td
             .right
               %ul.button-bar
-                %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(assignment), :class => "button"
-                %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(assignment), :class => 'button'
-                %li= link_to raw('<i class="fa fa-copy fa-fw"> </i> Copy'), copy_assignments_path(:id => assignment), :class => 'button', :method => :copy
-                %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete }, :class => "button"
-                
+                %li= link_to glyph(:check) + "Quick Grade", mass_grade_assignment_path(assignment), :class => "button"
+                %li= link_to glyph(:edit) + 'Edit', edit_assignment_path(assignment), :class => 'button'
+                %li= link_to glyph(:copy) + 'Copy', copy_assignments_path(:id => assignment), :class => 'button', :method => :copy
+                %li= link_to glyph(:trash) + 'Delete', assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete }, :class => "button"
