--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -3,33 +3,33 @@
     - if !presenter.new_assignment?
       %li
         %a{:href => new_assignment_path }
-          .fa.fa-plus.fa-fw
+          = glyph(:plus)
           New #{(term_for :assignment).titleize}
-      %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(presenter.assignment)
-      %li= link_to raw('<i class="fa fa-copy fa-fw"> </i> Copy'), copy_assignments_path(id: presenter.assignment), method: :copy
+      %li= link_to glyph(:edit) + 'Edit', edit_assignment_path(presenter.assignment)
+      %li= link_to glyph(:copy) + 'Copy', copy_assignments_path(id: presenter.assignment), method: :copy
       - if presenter.assignment.has_groups?
-        %li= link_to raw("<i class='fa fa-users fa-fw'> </i> Create #{term_for :group}"), new_group_path
+        %li= link_to glyph(:users) + "Create #{term_for :group}", new_group_path
       - if presenter.for_team?
-        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment, team: presenter.team)
+        %li= link_to glyph(:check) + 'Quick Grade', mass_grade_assignment_path(presenter.assignment, team: presenter.team)
       - else
-        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment)
+        %li= link_to glyph(:check) + 'Quick Grade', mass_grade_assignment_path(presenter.assignment)
 
       - if presenter.team
-        %li= link_to raw('<i class="fa fa-file-zip-o fa-fw"> </i> Download Team Submissions'), submissions_exports_path(assignment_id: presenter.assignment.id, team_id: presenter.team.id), method: :post
+        %li= link_to glyph("file-zip-o") + 'Download Team Submissions', submissions_exports_path(assignment_id: presenter.assignment.id, team_id: presenter.team.id), method: :post
       - else
-        %li= link_to raw('<i class="fa fa-file-zip-o fa-fw"> </i> Download All Submissions'), submissions_exports_path(assignment_id: presenter.assignment.id), method: :post
+        %li= link_to glyph("file-zip-o") + "Download All Submissions", submissions_exports_path(assignment_id: presenter.assignment.id), method: :post
 
       %li
         %a{:href => import_grades_assignment_path(presenter.assignment) }
-          .fa.fa-upload.fa-fw
+          = glyph(:upload)
           Import Grades
       %li
         %a{:href => export_grades_assignment_path(presenter.assignment, format: 'csv') }
-          .fa.fa-download.fa-fw
+          = glyph(:download)
           Download Grades
       %li
         %a{:href => design_assignment_rubric_path(presenter.assignment) }
-          .fa.fa-sliders.fa-fw
+          = glyph(:sliders)
           - if presenter.rubric_designed?
             Edit Rubric
           - else
@@ -43,9 +43,9 @@
               Review Grades
         %li.on(ng-cloak ng-show="useRubric")
           %a(ng-click="rubricsOff()")
-            glyph(:power-off)
+            = glyph("power-off")
             Rubric is On
         %li.off(ng-cloak ng-hide="useRubric")
           %a(ng-click="rubricsOn()")
-            glyph(:power-off)
+            = glyph("power-off")
             Rubric is Off
