--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -6,11 +6,11 @@
   %ul
     %li
       %a{:href => new_assignment_path }
-        %i.fa.fa-plus.fa-fw
+        = glyph(:plus)
         New #{(term_for :assignment).titleize}
     %li
       %a{:href => settings_assignments_path }
-        %i.fa.fa-dashboard.fa-fw
+        = glyph(:dashboard)
         Review #{(term_for :assignment).titleize} Settings
 
 .pageContent
@@ -56,7 +56,7 @@
                     .right
                       %ul.button-bar
                         - if ! ( assignment.rubric and assignment.rubric.designed? and assignment.use_rubric? )
-                          %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(assignment), :class => "button"
-                        %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(assignment), :class => 'button'
-                        %li= link_to raw('<i class="fa fa-copy fa-fw"> </i> Copy'), copy_assignments_path(:id => assignment), :class => 'button', :method => :copy
-                        %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete }, :class => "button"
+                          %li= link_to glyph(:check) + "Quick Grade", mass_grade_assignment_path(assignment), :class => "button"
+                        %li= link_to glyph(:edit) + "Edit", edit_assignment_path(assignment), :class => 'button'
+                        %li= link_to glyph(:copy) + "Copy", copy_assignments_path(:id => assignment), :class => 'button', :method => :copy
+                        %li= link_to glyph(:trash) + "Delete", assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete }, :class => "button"
