--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -6,7 +6,7 @@
   %ul
     %li
       %a{:href => new_assignment_path }
-        %i.fa.fa-plus
+        = glyph(:plus)
         New #{(term_for :assignment).titleize}
 
 .pageContent
@@ -40,37 +40,37 @@
                 %i.fa.fa-calendar.fa-fw
               .display_on_hover.hover-style
                 Shown in Timeline
-                
+
             %th{:scope => "col"}
               %a
                 %i.fa.fa-sliders.fa-fw
               .display_on_hover.hover-style
                 Shown in Predictor
-                
+
             %th{:scope => "col"}
               %a
                 %i.fa.fa-list.fa-fw
               .display_on_hover.hover-style
                 Shown in Due This Week
-                
+
             %th{:scope => "col"}
               %a
                 %i.fa.fa-pencil.fa-fw
               .display_on_hover.hover-style
                 Logged By Students
-                
+
             %th{:scope => "col"}
               %a
                 %i.fa.fa-unlock-alt.fa-fw
               .display_on_hover.hover-style
                 Release Required
-                
+
             %th{:scope => "col"}
               %a
                 %i.fa.fa-envelope.fa-fw
               .display_on_hover.hover-style
                 Email Students on Release
-                
+
             %th{:scope => "col"} Grade Form Preview
             %th{:scope => "col"} Points
 
@@ -88,7 +88,7 @@
                     %i.fa.fa-eye
                   .display_on_hover.hover-style
                     Visible to Students
-                    
+
               %td
                 - if assignment.required?
                   %a
@@ -101,49 +101,49 @@
                     %i.fa.fa-paperclip
                   .display_on_hover.hover-style
                     Accepts Submissions
-                    
+
               %td
                 - if assignment.include_in_timeline?
                   %a
                     %i.fa.fa-calendar
                   .display_on_hover.hover-style
                     Shown in Timeline
-                    
+
               %td
                 - if assignment.include_in_predictor?
                   %a
                     %i.fa.fa-sliders
                   .display_on_hover.hover-style
                     Shown in Predictor
-                    
+
               %td
                 - if assignment.include_in_to_do?
                   %a
                     %i.fa.fa-list.fa-fw
                   .display_on_hover.hover-style
                     Shown in Due This Week
-                    
+
               %td
                 - if assignment.student_logged?
                   %a
                     %i.fa.fa-pencil.fa-fw
                   .display_on_hover.hover-style
                     Logged By Students
-                    
+
               %td
                 - if assignment.release_necessary?
                   %a
                     %i.fa.fa-unlock-alt.fa-fw
                   .display_on_hover.hover-style
                     Release Required
-                    
+
               %td
                 - if assignment.notify_released?
                   %a
                     %i.fa.fa-envelope.fa-fw
                   .display_on_hover.hover-style
                     Email Students on Release
-                    
+
 
               %td
                 - if assignment.grade_select?
@@ -174,5 +174,5 @@
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(assignment), :class => 'button'
-                    %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete },  :class => 'button'
+                    %li= link_to glyph(:edit) + "Edit", edit_assignment_path(assignment), :class => 'button'
+                    %li= link_to glyph(:trash) + "Delete", assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete },  :class => 'button'
