--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -92,4 +92,4 @@
   .submit-buttons
     %ul
       %li= submit_tag "#{@badge.persisted? ? 'Update' : 'Create'} #{term_for :badge}", :class => 'button'
-      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), badges_path, :class => 'button'
+      %li= link_to glyph("times-circle") + "Cancel", badges_path, :class => 'button'
