--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -52,7 +52,7 @@
         - if @badge.description?
           .feedback= raw @badge.description
         - if @badge.is_unlockable?
-          %li 
+          %li
             %a
               %i.fa.fa-lock
               Unlock Requirements
@@ -81,7 +81,7 @@
             - if current_user_is_staff?
               = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
   .clear
-  
+
   - if current_user_is_staff?
     %table.nofeatures_default_last_name_dynatable
       %thead
@@ -93,7 +93,7 @@
           %th{ :width => 200} Feedback
           - if @badge.can_earn_multiple_times
             %th Count
-          - if @badge.is_unlockable? 
+          - if @badge.is_unlockable?
             %th{ :width => 70}
           %th{ :width => 230}
       %tbody
@@ -112,15 +112,15 @@
                 %div{ :width => 80}= raw badge.feedback
             - if @badge.can_earn_multiple_times
               %td= @badge.earned_badge_count_for_student(student)
-            - if @badge.is_unlockable? 
+            - if @badge.is_unlockable?
               %td
                 - if ! @badge.is_unlocked_for_student?(student)
-                  = link_to raw("<i class='fa fa-lock fa-fw'></i> Unlock"), manually_unlock_unlock_state_path(:student_id => student.id, :badge_id => @badge.id), :method => :post, :class => "button"
+                  = link_to glyph(:lock) + "Unlock", manually_unlock_unlock_state_path(:student_id => student.id, :badge_id => @badge.id), :method => :post, :class => "button"
             %td
               .right
                 - @badge.earned_badges.where(:student_id => student.id).each do |badge|
                   %ul.button-bar
-                    %li= link_to raw("<i class='fa fa-star fa-fw'></i> Awarded #{badge.created_at.strftime("%b %d")}"), badge_earned_badge_path(@badge, badge.id), :class => "button"
-                    %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_badge_earned_badge_path(@badge, badge.id), :class => "button"
-                    %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), badge_earned_badge_path(@badge, badge), :class => "button", :method => :delete, :data => { confirm: "Are you sure you want to delete this award?" }
+                    %li= link_to glyph(:star) + "Awarded #{badge.created_at.strftime("%b %d")}", badge_earned_badge_path(@badge, badge.id), :class => "button"
+                    %li= link_to glyph(:edit) + "Edit", edit_badge_earned_badge_path(@badge, badge.id), :class => "button"
+                    %li= link_to glyph(:trash) + "Delete", badge_earned_badge_path(@badge, badge), :class => "button", :method => :delete, :data => { confirm: "Are you sure you want to delete this award?" }
                   .clear
