--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -7,7 +7,7 @@
     %ul
       %li
         %a{:href => new_challenge_path }
-          %i.fa.fa-plus
+          = glyph(:plus)
           New #{(term_for :challenge).titleize}
 
 .pageContent
