--- a/app/views/challenges/_staff_index.haml
+++ b/app/views/challenges/_staff_index.haml
@@ -26,6 +26,6 @@
         %td
           .right
             %ul.button-bar
-              %li= link_to raw("<i class='fa fa-check fa-fw'></i> Quick Grade"), mass_edit_challenge_challenge_grades_path(challenge), :class => 'button'
-              %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_challenge_path(challenge), :class => 'button'
-              %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), challenge, :class => 'button', :method => :delete, data: { confirm: 'Are you sure?' }
+              %li= link_to glyph(:check) + "Quick Grade", mass_edit_challenge_challenge_grades_path(challenge), :class => 'button'
+              %li= link_to glyph(:edit) + "Edit", edit_challenge_path(challenge), :class => 'button'
+              %li= link_to glyph(:trash) + "Delete", challenge, :class => 'button', :method => :delete, data: { confirm: 'Are you sure?' }
