Remove old foundation classes

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -69,7 +69,7 @@ i.missing_grade
     vertical-align: center
 
 /** Leaderboard Styles **/
-.small-12.columns.team
+.columns.team
   border: 3px solid $color-white
 
 #leaderboard .rank
