--- a/app/views/challenges/_challenge_score_level_fields.haml
+++ b/app/views/challenges/_challenge_score_level_fields.haml
@@ -1,9 +1,9 @@
-.small-12.columns.panel
-  %span.large-3.columns
+.columns.panel
+  %span.columns
     = f.input :name, :label => "Level Name"
-  %span.large-3.columns
+  %span.columns
     = f.label :value, "Points Awarded"
     = f.text_field :value, data: {autonumeric: true, "m-dec" => "0"}
-  %span.large-6.columns
+  %span.columns
     = f.hidden_field :_destroy, class: 'destroy'
     = link_to 'Remove Level', '#', class: 'remove-challenge-score-level button radius right'
