--- a/app/views/layouts/predictor.html.haml
+++ b/app/views/layouts/predictor.html.haml
@@ -30,7 +30,7 @@
         - else
           = render 'layouts/public'
           .row.panel.footer
-            .small-12.columns
+            .columns
               = render 'layouts/footer'
         = render 'layouts/background'
         = render 'layouts/google_analytics'
