--- a/app/views/grades/_level.html.haml
+++ b/app/views/grades/_level.html.haml
@@ -1,7 +1,7 @@
 .row
-  .small-8.columns(style="padding:0")
+  .columns(style="padding:0")
     %input(type="text" ng-model="level.name" placeholder="Level Name" required ng-blur="level.modify(levelForm)" ng-change="level.change()")
-  .small-4.columns(style="padding:0")
+  .columns(style="padding:0")
     %input(type="number" ng-model="level.points" placeholder="Points" min=0 ng-max="criterion.max_points" ng-blur="level.modify(levelForm)" ng-change="level.change()" required)
 .row
   %input(type="text" ng-model="LevelDescription" placeholder="Description" value="{{level.description}}" ng-blur="level.modify(levelForm)" ng-change="level.change()")
