--- a/app/views/courses/predictor_settings.html.haml
+++ b/app/views/courses/predictor_settings.html.haml
@@ -36,4 +36,4 @@
                       %input{:type => "checkbox" }
       .right.form_buttons
         = f.button :submit, "Update Settings", :class => "button"
-        = link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), dashboard_path, :class => "button"
+        = link_to glyph("times-circle") + "Cancel", dashboard_path, :class => "button"
