--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -40,4 +40,4 @@
       .submit-buttons
         %ul
           %li= f.button :submit, "Award", :class => "button"
-          %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), badges_path, :class => "button"
+          %li= link_to glyph("times-circle") + "Cancel", badges_path, :class => "button"
