--- a/app/views/exports/index.html.haml
+++ b/app/views/exports/index.html.haml
@@ -6,7 +6,7 @@
   = render 'layouts/alerts'
 
   %h2 Submissions Exports
-  %br 
+  %br
   %table.nofeatures_default_last_name_dynatable
     %thead
       %tr
@@ -46,5 +46,5 @@
             .right
               %ul.button-bar
                 - if export.downloadable?
-                  %li= link_to raw("<i class='fa fa-download fa-fw'> </i> Download"), download_submissions_export_path(export), :class => 'button', style: "margin-right: 18px"
-                %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), export, :class => 'button', :data => { confirm: 'This will delete the submissions export. Are you sure?' }, :method => :delete
+                  %li= link_to glyph(:download) + "Download", download_submissions_export_path(export), :class => 'button', style: "margin-right: 18px"
+                %li= link_to glyph(:trash) + Delete", export, :class => 'button', :data => { confirm: 'This will delete the submissions export. Are you sure?' }, :method => :delete
