--- a/app/views/grade_scheme_elements/index.html.haml
+++ b/app/views/grade_scheme_elements/index.html.haml
@@ -6,7 +6,7 @@
   %ul
     %li
       %a{:href => mass_edit_grade_scheme_elements_path }
-        %i.fa.fa-edit
+        = glyph(:edit)
         Edit
 
 .pageContent
